updated changelog and added repo url to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jest",
     "lint": "eslint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bbgrabbag/code-challenge-playground"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
